--- a/style.scss
+++ b/style.scss
@@ -121,10 +121,10 @@ body{width:100%;
             position:relative;
             top:-4.5rem;
             display: grid;
-            grid-template-columns: 90% 10%;
+            grid-template-columns: 90% 10% 10%;
             column-gap:0% ;
-            input{
-                width:80%;
+            #value{
+                width:87%;
                 margin:2.5rem 0rem;
                 height:4rem;
                 border-radius:.5rem;
@@ -133,21 +133,26 @@ body{width:100%;
                 font-weight: 500;
                 outline: none;
                 position: relative;
-                left:7%;
+                left:3rem;
             }
             p{
-                display: none;
+                visibility: hidden;
                 color:red;
                 font-style: italic;
+                position: relative;
+                top:6rem;
+                right:72rem;
             }
             .submit{
                 @include buttons();
                 height:4.2rem;
-                margin:2.5rem -2rem;
-                width:70%;
+                margin:2.5rem 4rem 2.5rem 0rem;
+                width:110%;
                 border-radius: .4rem;
                 position: relative;
-                right: -10%;
+                left:-14rem;
+                text-transform: capitalize;
+                font-size: 1.3rem;
             }
         }
         .display-url{
